# hse-algos-and-ds

./: main.py
dynprog_vs_greedy/: main.py
nn/: NN.ipynb  TensorFlow example.ipynb  pyproject.toml
quadtree/: main.py
roman-pl/: .gitignore  pyproject.toml
