[tool.poetry]
name = "nn"
version = "0.1.0"
description = ""
authors = ["Alexander Bespalov <discrimy.off@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
tensorflow = "^2.16.1"
jupyterlab = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
